src/objects/SearchSetting__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Search Settings</relationshipLabel>
        <relationshipName>Search_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Component__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Search</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Search Settings</relationshipLabel>
        <relationshipName>Search_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Autocompleted/editable field based on Name.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldsToSearch__c</fullName>
        <description>Fields in which will be searched the inserted text</description>
        <inlineHelpText>The fields api names separeted by comma</inlineHelpText>
        <label>Fields To Search</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldsToShow__c</fullName>
        <description>Fields that will be shown</description>
        <inlineHelpText>Insert the fields api names separeted by comma</inlineHelpText>
        <label>Fields To Show</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <description>SOQL additional filter</description>
        <inlineHelpText>SOQL additional filter</inlineHelpText>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IconName__c</fullName>
        <description>Name of the Lightning Icon to show next to the name</description>
        <inlineHelpText>Insert the name of a Lightning Icon. 
Ex: &quot;utility:user&quot;</inlineHelpText>
        <label>Icon Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Navigation</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Search Settings</relationshipLabel>
        <relationshipName>Search_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <description>API name of the Sobject</description>
        <inlineHelpText>Insert the API name of the Salesforce Object</inlineHelpText>
        <label>Object API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PredictiveSearchRecordsNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of records to show in the predictive search window</description>
        <inlineHelpText>Number of records to show in the predictive search window</inlineHelpText>
        <label>Predictive Search Records Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeDevName__c</fullName>
        <inlineHelpText>Insert the record type developer name</inlineHelpText>
        <label>Record Type Dev Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLParameterField__c</fullName>
        <defaultValue>&apos;Id&apos;</defaultValue>
        <label>URL Parameter Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLParameterName__c</fullName>
        <defaultValue>&apos;Id&apos;</defaultValue>
        <label>URL Parameter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Search Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Search Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fields_To_Search_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FieldsToSearch__c)</errorConditionFormula>
        <errorDisplayField>FieldsToSearch__c</errorDisplayField>
        <errorMessage>Fields To Search field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fields_To_Show_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FieldsToShow__c)</errorConditionFormula>
        <errorDisplayField>FieldsToShow__c</errorDisplayField>
        <errorMessage>Fields To Show field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_External_Id</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( ExternalId__c ,&quot;^[A-Za-z0-9_]*$&quot;))</errorConditionFormula>
        <errorDisplayField>ExternalId__c</errorDisplayField>
        <errorMessage>Only alfanumeric or underscore characters are admitted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_URL_Parameter_Name</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( ExternalId__c ,&quot;^[A-Za-z0-9_]*$&quot;))</errorConditionFormula>
        <errorDisplayField>URLParameterName__c</errorDisplayField>
        <errorMessage>Only alfanumeric or underscore characters are admitted</errorMessage>
    </validationRules>
</CustomObject>